# mypypackage

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  usage.rst
docs/source/: modules.rst  mypypackage.rst
tests/: test_mypypackage.py
