[tool.poetry]
name = "mypypackage"
version = "0.1.0"
description = "This package was created for Assignment 1 DSCI 524"
authors = ["Nash Makhija <naurattan.makhija@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
